# VTK

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  lefthook.yml  treefmt.nix  vtk.cabal
.github/workflows/: ci.yml
scripts/: ci.sh  pre-commit.sh
src/Data/: VTK.hs
src/Data/VTK/: Types.hs  VTKXMLTemplate.hs
